--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "papaparse": "5.4.1",
     "dotenv": "^17.2.3",
     "pg": "^8.17.2",
-    "@supabase/supabase-js": "2.39.0"
+    "@supabase/supabase-js": "2.39.0",
+    "vite": "^7.3.1",
+    "@vitejs/plugin-react": "^5.1.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
